[package]
name = "zk-paillier"
version = "0.4.4"
edition = "2018"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.9"
digest = "0.9"
thiserror = "1"

[dependencies.curv-kzen]
git = "https://github.com/fathens/curv"
branch = "wasm"

[dependencies.paillier]
git = "https://github.com/fathens/rust-paillier"
package = "kzen-paillier"
branch = "wasm"
default-features = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "all"
harness = false
